// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  z-index: 1000;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 3rem;
  background: rgba(255,255,255,0.95);
  color: #101113;
  overflow-y: auto;
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
  position: absolute;
}

.c1.scroll-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: none;
}

.c1.scroll-content .header {
  margin-bottom: 2rem;
}

.c1 .content {
  padding: 2rem;
}

.c1.scroll-content .content {
  overflow-y: auto;
  margin: 0;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 1px 0 1px 0;
}

.c1.scroll-content .content::after {
  content: '';
  margin-top: 2rem;
  display: block;
}

.c1 .content.loading {
  display: none;
}

.c1.scroll-content .footer {
  margin-top: 2rem;
}

<span
  className="c0"
>
  <aside
    className="container-root c1"
    style={undefined}
  >
    
    <div
      className="content"
    >
      <div />
    </div>
    
  </aside>
</span>
`;

exports[`When using snapshots with loader Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c3 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto;
  border-width: 3px;
  border-style: solid;
  border-color: #707377;
  border-radius: 50%;
  border-left-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
  -webkit-animation: iVXCSc 650ms infinite linear;
  animation: iVXCSc 650ms infinite linear;
}

.c2 {
  text-align: center;
}

.c2.centered {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: #707377;
  margin-top: 1.5rem;
}

.c1 {
  z-index: 1000;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 3rem;
  background: rgba(255,255,255,0.95);
  color: #101113;
  overflow-y: auto;
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
  position: absolute;
}

.c1.scroll-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: none;
}

.c1.scroll-content .header {
  margin-bottom: 2rem;
}

.c1 .content {
  padding: 2rem;
}

.c1.scroll-content .content {
  overflow-y: auto;
  margin: 0;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 1px 0 1px 0;
}

.c1.scroll-content .content::after {
  content: '';
  margin-top: 2rem;
  display: block;
}

.c1 .content.loading {
  display: none;
}

.c1.scroll-content .footer {
  margin-top: 2rem;
}

<span
  className="c0"
>
  <aside
    className="container-root c1"
    style={undefined}
  >
    
    <div
      className="content loading"
    >
      <div />
    </div>
    <div
      className="centered c2"
    >
      <div>
        <div
          className="c3"
        />
        <div
          className="c4"
        >
          loading
        </div>
      </div>
    </div>
  </aside>
</span>
`;

exports[`When using snapshots with title, header and footer Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c2 {
  margin: -3rem 0 5rem;
}

.c2.in-header {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0 0 0 2rem;
  line-height: 5rem;
}

.c1 {
  z-index: 1000;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 3rem;
  background: rgba(255,255,255,0.95);
  color: #101113;
  overflow-y: auto;
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
  position: absolute;
}

.c1.scroll-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: none;
}

.c1.scroll-content .header {
  margin-bottom: 2rem;
}

.c1 .content {
  padding: 2rem;
}

.c1.scroll-content .content {
  overflow-y: auto;
  margin: 0;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 1px 0 1px 0;
}

.c1.scroll-content .content::after {
  content: '';
  margin-top: 2rem;
  display: block;
}

.c1 .content.loading {
  display: none;
}

.c1.scroll-content .footer {
  margin-top: 2rem;
}

<span
  className="c0"
>
  <aside
    className="container-root c1"
    style={undefined}
  >
    <header
      className="header"
    >
      <h2
        className="sidebar-title in-header c2"
      >
        title
      </h2>
      <div />
    </header>
    <div
      className="content"
    >
      <div />
    </div>
    <div />
  </aside>
</span>
`;
